# avito_application

./: .gitignore
backend_django/: Dockerfile  pyproject.toml  requirements.txt
backend_django/ads/: admin.py  filters.py  urls.py
backend_django/ads/migrations/: 0001_initial.py
backend_django/ads/models/: __init__.py  ad.py  comment.py
backend_django/ads/permissions/: ad_permissions.py  permissions.py
backend_django/ads/serializers/: ad.py  comment.py
backend_django/ads/views/: ad.py  comment.py
backend_django/backend_django/: settings.py  urls.py
backend_django/redoc/: urls.py
backend_django/users/: email.py  managers.py  urls.py
backend_django/users/migrations/: 0001_initial.py
backend_django/users/models/: user.py
backend_django/users/serializers/: user.py
starting_containers/: docker-compose.yaml
